fixed loading spinner display error on small screens

--- a/public/style.css
+++ b/public/style.css
@@ -212,6 +212,7 @@
   }
 
   #model-select,
+  #global-loading-spinner,
   #generating-response-spinner {
     left: 15px;
   }
